test_regress/t/t_mem_multi_ref_bad.out
%Error: t/t_mem_multi_ref_bad.v:14: Illegal bit or array select; type does not have a bit range, or bad dimension: type is logic
      dimn[1:0] = 0;             
          ^
%Error: t/t_mem_multi_ref_bad.v:14: Extracting 2 bits from only 1 bit number
      dimn[1:0] = 0;             
          ^
%Error: t/t_mem_multi_ref_bad.v:15: Illegal bit or array select; type does not have a bit range, or bad dimension: type is logic
      dim0[1][1] = 0;            
             ^
%Warning-SELRANGE: t/t_mem_multi_ref_bad.v:15: Selection index out of range: 1:1 outside 0:0
      dim0[1][1] = 0;            
             ^
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Error: t/t_mem_multi_ref_bad.v:16: Illegal bit or array select; type does not have a bit range, or bad dimension: type is logic
      dim1[1][1][1] = 0;         
                ^
%Warning-SELRANGE: t/t_mem_multi_ref_bad.v:16: Selection index out of range: 1:1 outside 0:0
      dim1[1][1][1] = 0;         
                ^
%Error: t/t_mem_multi_ref_bad.v:18: Illegal +: or -: select; type already selected, or bad dimension: type is UNPACKARRAYDTYPE
      dim2[0 +: 1][1] = 0;       
          ^
%Error: t/t_mem_multi_ref_bad.v:22: Illegal bit or array select; type does not have a bit range, or bad dimension: type is logic
      dim0nv[1][1] = 0;          
               ^
%Warning-SELRANGE: t/t_mem_multi_ref_bad.v:22: Selection index out of range: 1:1 outside 0:0
      dim0nv[1][1] = 0;          
               ^
%Error: Exiting due to
